[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Scenes/SubOptions/Playlists/CustomPlaylist-s/Playlists.gd" type="Script" id=1]
[ext_resource path="res://src/Ressources/Themes/LyricsEditor.tres" type="StyleBox" id=2]

[node name="Playlists" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="EmptyTop" type="Control" parent="VBoxContainer"]
margin_right = 1120.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1120.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmptyRight" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 572.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 10.0
margin_right = 1020.0
margin_bottom = 572.0
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Playlists" type="GridContainer" parent="VBoxContainer/HBoxContainer/ScrollContainer"]
margin_right = 1010.0
margin_bottom = 572.0
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 4

[node name="Buffer" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 1020.0
margin_right = 1030.0
margin_bottom = 572.0
rect_min_size = Vector2( 10, 0 )

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 1030.0
margin_right = 1110.0
margin_bottom = 572.0
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
margin_right = 80.0
margin_bottom = 572.0
rect_min_size = Vector2( 80, 0 )

[node name="CreateFromFolder" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_left = 5.0
margin_right = 75.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "Folder"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateSmartPlaylist" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_left = 5.0
margin_top = 38.0
margin_right = 75.0
margin_bottom = 68.0
rect_min_size = Vector2( 70, 30 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "New Smart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreatePlaylist" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_left = 5.0
margin_top = 76.0
margin_right = 75.0
margin_bottom = 106.0
rect_min_size = Vector2( 70, 30 )
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "New"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmptyLeft" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 1110.0
margin_right = 1120.0
margin_bottom = 572.0
rect_min_size = Vector2( 10, 0 )

[node name="PlaylistPopups" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="PopupBackground" type="ColorRect" parent="PlaylistPopups"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.129412, 0.129412, 0.686275 )
